(FuseNavBar) no navbar css fixed, missing nav-link-title added to collapse item.

--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -13,6 +13,12 @@ body {
             &:first-child {
                 padding-right: 64px !important;
             }
+
+            &:first-child:last-child {
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+            }
+
         }
     }
 }
